<resources>
    <string name="app_name">Bringero</string>
    <string name="app_name_">Bringero</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ? </string>
    <string name="username">Username</string>
    <string name="bodytext">01200355945</string>
    <string name="signup">Signup</string>
    <string name="verify_your_phone_number">Verify your Phone Number</string>
    <string name="enter_the_4_digit_pin_that_we_sent_to">Enter the 6 digit PIN that we sent to:</string>
    <string name="verify">Verify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="follow">Follow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="adresses">Adresses</string>
    <string name="change_password">Change Password</string>
    <string name="security">Security</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="info">Info</string>
    <string name="setting">Setting</string>
    <string name="menu_wish_list">Wish list</string>
    <string name="menu_location">Location</string>
    <string name="menu_order">Order</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_discounts">Discounts</string>
    <string name="menu_terms_conditions">Terms Conditions</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_settings">My Settings</string>
    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="date_of_birth_optional">Date Of Birth ( Optional )</string>
    <string name="femail">Female</string>
    <string name="mail">Male</string>
    <string name="select_date">Select Date</string>
    <string name="gender_optional">Gender ( Optional )</string>
    <string name="receive_updates_of_offers_npromotions_and_discount">Receive Updates Of Offers ,\nPromotions And Discount</string>
    <string name="sms_notification">Sms Notification</string>
    <string name="newsletter_subscription">Newsletter Subscription</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="cnofirm_password">Cnofirm Password</string>
    <string name="contat_us">Contat Us</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="choose_language">Choose Language</string>
    <string name="notification">Notification</string>
    <string name="my_cart">My Cart</string>
    <string name="apply_voucher_code">Apply Voucher Code</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="request_location_permission">Request Location Permission</string>
    <string name="pause_tracking">Pause tracking</string>
    <string name="service_running">Location service running</string>
    <string name="service_not_running">Location service isn\'t running</string>
    <string name="request_permission">Request Location permission</string>
    <string name="resume_tracking">Start tracking</string>
    <string name="your_publishable_key">FLfD1OcSxlMeLaQI3VdkQB9fQmm9lDK_WPyyCG6lqcsE1ql8hVleTk3NLDw-52KUs8r2Z5MTDLV8qYaB7ZjQ3g</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_location">Save location</string>
    <string name="click_longer_to_set_the_place">Click longer to choose location</string>
    <string name="permission_denied">Permission denied</string>
    <string name="direction_not_found">Direction not found</string>
    <string name="orders">Orders</string>
    <string name="repeattheorder">repeat the order</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="order_in_the_way">Order In the way</string>
    <string name="track_package">Track Package</string>
    <string name="order_information">Order Information</string>
    <string name="order_id">Order ID</string>
    <string name="order_time">Order Time</string>
    <string name="payment">Payment</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancellation_reasons">Cancellation Reasons</string>
    <string name="change_of_mind">Change of mind</string>
    <string name="wrong_delivery_address">Wrong delivery address</string>
    <string name="forgot_to_apply_voucher">Forgot to apply voucher</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="menu_pricing">Pricing</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="confirm_password">Confirm password</string>
    <string name="currency">EGP</string>
    <string name="payment_information">Payment Information</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="confirm">Confirm</string>
    <string name="current">Current</string>
    <string name="last_order">Last Order</string>
    <string name="cart">Cart</string>
    <string name="product_pricing">Product pricing</string>
    <string name="gallery">Gallery</string>
    <string name="default_notification_channel_id">fire_base_notification</string>
    <string name="fcm_message">fcm_mesage</string>
    <string name="search">Search</string>
    <string name="deliver_to">Deliver To</string>
    <string name="set_location">Set location</string>
    <string name="region">Region</string>
    <string name="address_name">Address Name</string>
    <string name="flatType">Flat Type</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="flat">Flat</string>
    <string name="save_address">Save Address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="title_location_permission">Location Permission Needed</string>
    <string name="text_location_permission">Allow GoFair to acccess your Location</string>
    <string name="ok">OK</string>
    <string name="add_new_location">Add new location</string>
    <string name="update_location">Update Location</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="successful_update">Successful update !!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="error_message_no_more_space">
        Your storage is unavailable.</string>
    <string name="error_message_insufficient_space">
        You have few space available, please make sure your have more than 5MB on disk to
        take pictures!</string>
    <string name="error_message">Error occurred!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="first_name_field_is_required">First name field is required !!</string>
    <string name="last_name_field_is_required">Last name field is required</string>
    <string name="save_failed">Save failed</string>
    <string name="recent_address">Recent Address</string>
    <string name="apply_location">Apply Location</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyBWquUi5NM0iXgCH4HWhz7rRYxRPTR19_E</string>
    <string name="stores">Stores</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="current_orders">Current Orders</string>
    <string name="last_orders">Last Orders</string>
    <string name="packets">Packets</string>
    <string name="items">Items</string>
    <string name="start_shopping_now">Start Shopping Now</string>
    <string name="there_are_no_orders_under_delivery">There are no orders under delivery</string>
    <string name="total_speed_cart">Total:</string>
    <string name="address">Address</string>
    <string name="add_new">Add New</string>
    <string name="placeholder_title_cart">No products in the cart</string>
    <string name="placeholder_dec_cart">Start browsing the products from the home page</string>
    <string name="placeholder_title_product">There are no products to display</string>
    <string name="placeholder_dec_product">There are no products to display</string>
    <string name="another_store">Another store</string>
    <string name="placeholder_title_notification">There are no notifications to display</string>
    <string name="placeholder_dec_notification">Notifications will be added here</string>
    <string name="placeholder_title_search">There are no search results</string>
    <string name="placeholder_dec_search">Look for other products</string>
    <string name="rating">Rating</string>
    <string name="preparing_time">Preparing Time</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="menu_my_addresses">My addresses</string>
    <string name="menu_contact">Contact</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq_support"><![CDATA[Faq & Support]]></string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="canceled">Canceled</string>
    <string name="arrived_in">Arrived in</string>
    <string name="tracking">Tracking</string>
    <string name="view_order">View Order</string>
    <string name="products">Products</string>
    <string name="order_status_ordersrequested">Requested</string>
    <string name="order_status_storesreplied">Replied</string>
    <string name="order_status_storesprepared">Prepared</string>
    <string name="order_status_assignedtopilot">Pilot</string>
    <string name="order_status_delivering">Delivering</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="pilot">Pilot</string>
    <string name="requsted">Requsted</string>
    <string name="delivered">Delivered</string>
    <string name="confirmed">Confirmed</string>
    <string name="delivering">Delivering</string>
    <string name="view_cart">View Cart</string>
    <string name="limit_max_cart">You have reached the maximum order limit</string>
    <string name="_continue">Continue</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="resend">Resend</string>
</resources>