<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/gallaryFragment">

    <!-- home.ui.storetypes.StoreTypesFragment -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.corptia.bringero.view.home.ui.storetypes.StoreTypesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_store_types"
        app:popUpToInclusive="false"
        />

    <fragment
        android:id="@+id/gallaryFragment"
        android:name="com.corptia.bringero.view.gallaryStore.GallaryFragment"
        android:label="fragment_gallary"
        tools:layout="@layout/fragment_gallary" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.corptia.bringero.view.home.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.corptia.bringero.view.home.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.corptia.bringero.view.home.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.corptia.bringero.view.home.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.corptia.bringero.view.Main.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.corptia.bringero.view.Setting.main.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>