<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.language.LanguageFragment">

    <TextView
        android:id="@+id/txt_lab_setting"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/language"
        style="@style/TextHeaderSetting"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/txt_hint_language"
        android:text="@string/choose_language"
        style="@style/HintTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lab_setting"
        android:layout_marginTop="@dimen/app_margin"
        />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_input"
        app:layout_constraintTop_toBottomOf="@+id/txt_hint_language"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:spinnerMode="dialog"/>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonNormalStyle"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/app_margin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>