<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.setting.contactUs.ContactUsFragment">


    <TextView
        android:id="@+id/txt_lab_setting"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/contat_us"
        style="@style/TextHeaderSetting"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_lab_setting"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShadowLayoutInput">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    style="@style/TextInputLayoutStyle"
                    >

                    <EditText
                        style="@style/EditTextStyle"
                        android:hint="@string/name"
                        android:inputType="text"
                        tools:text="Hazem"

                        />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShadowLayoutInput">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    style="@style/TextInputLayoutStyle"
                    >

                    <EditText
                        style="@style/EditTextStyle"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:text="Hazem@yahoo.com"

                        />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShadowLayoutInput">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_message"
                    style="@style/TextInputLayoutStyle"
                    >

                    <EditText
                        style="@style/EditTextStyle"
                        android:hint="@string/message"
                        android:inputType="textMultiLine"
                        tools:text="Message"
                        android:lines="6"
                        android:gravity="start"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>





        </LinearLayout>



    </ScrollView>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonNormalStyle"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/app_margin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>